# c-usb-module

./: .gitignore  CMakeLists.txt  PeachyUSB.sln  README.md  build_linux.sh  build_mac.sh  build_windows_32.bat  build_windows_64.bat  c_flag_overrides.cmake  cxx_flag_overrides.cmake
PeachyUSB/: PeachyUSB.vcxproj  PeachyUSB.vcxproj.filters  main.cpp
inc/: PeachyUsb.h
libusb/: .gitignore
libusb/Win32/Debug/lib/: libusb-1.0.lib
libusb/Win32/Release/lib/: libusb-1.0.lib
libusb/msvc/: libusb_static_2013.sln  libusb_static_2013.vcxproj
libusb/x64/Debug/lib/: libusb-1.0.lib
libusb/x64/Release/lib/: libusb-1.0.lib
python/: peachyusb.py  testpeachy.py
src/: CMakeLists.txt  main.cpp  reader.cpp  writer.cpp
